; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashutil.c__hash_spareindex.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashutil.c__hash_spareindex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HASH_SPLITPOINT_GROUPS_WITH_ONE_PHASE = common dso_local global i32 0, align 4
@HASH_SPLITPOINT_PHASE_BITS = common dso_local global i32 0, align 4
@HASH_SPLITPOINT_PHASE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_hash_spareindex(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @_hash_log2(i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @HASH_SPLITPOINT_GROUPS_WITH_ONE_PHASE, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %2, align 4
  br label %34

13:                                               ; preds = %1
  %14 = load i32, i32* @HASH_SPLITPOINT_GROUPS_WITH_ONE_PHASE, align 4
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @HASH_SPLITPOINT_GROUPS_WITH_ONE_PHASE, align 4
  %17 = sub nsw i32 %15, %16
  %18 = load i32, i32* @HASH_SPLITPOINT_PHASE_BITS, align 4
  %19 = shl i32 %17, %18
  %20 = load i32, i32* %5, align 4
  %21 = add nsw i32 %20, %19
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %3, align 4
  %23 = sub nsw i32 %22, 1
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* @HASH_SPLITPOINT_PHASE_BITS, align 4
  %26 = add nsw i32 %25, 1
  %27 = sub nsw i32 %24, %26
  %28 = ashr i32 %23, %27
  %29 = load i32, i32* @HASH_SPLITPOINT_PHASE_MASK, align 4
  %30 = and i32 %28, %29
  %31 = load i32, i32* %5, align 4
  %32 = add nsw i32 %31, %30
  store i32 %32, i32* %5, align 4
  %33 = load i32, i32* %5, align 4
  store i32 %33, i32* %2, align 4
  br label %34

34:                                               ; preds = %13, %11
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32 @_hash_log2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
